added the first blog

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>my webbie</title>
 </head>
 <body>
+    <div>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, aliquid molestias illo assumenda ex sit voluptas explicabo harum, cupiditate id at. Porro, ipsa odit. Laboriosam libero ullam consequatur. Atque, vel.</h3>
+    </div>
     
 </body>
 </html>
